<?xml version="1.0"?>
<package format="2">
  <name>motoman_mh12_gazebo</name>
  <version>0.0.0</version>
  <description>The motoman_mh12_gazebo package</description>
  <maintainer email="mstomas@clemson.edu">Mark Tomaszewski</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>motoman_mh12_support</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
